Uploaded image for project: 'Qt'
  1. Qt
  2. QTBUG-29391

Windows: QProcess::waitForFinished not returning after timeout

XMLWordPrintable

    • Icon: Bug Bug
    • Resolution: Done
    • Icon: P1: Critical P1: Critical
    • 5.1.1
    • 5.0.0
    • Core: I/O
    • None
    • 3f605c8b45634c3fae06610b1102cbeae2382bec ee73f7b7db91f6ba32300cb6c16978371012cfb9 568f82fba397e06a26b4fd40f074e4432d02d248

      QProcess::waitForFinished() does never return, even if a timeout is set.

      This is reproducable when cancelling an ongoing build using mingw32-make inside Qt Creator: Qt Creator will first send a Ctrl-C command (which usually breaks mignw32-make , even if executed with cmd.exe). Then it will call

      m_process->waitForFinished(5000);
      

      in AbstractProcessStep::checkForCancel(). However, this call will never return. Adding log statements to qprocess_win.cpp shows that the "forever" loop in static bool drainOutputPipes(QProcessPrivate *d) is never exited.

        1. QTBUG-29391.7z
          2 kB
          Ray Donnelly
        No reviews matched the request. Check your Options in the drop-down menu of this sections header.

            jbornema Joerg Bornemann
            kkohne Kai Köhne
            Votes:
            1 Vote for this issue
            Watchers:
            6 Start watching this issue

              Created:
              Updated:
              Resolved:

                There are no open Gerrit changes