QWinOverlappedIoNotifier: fix race condition

Fix race condition in waitForNotified for zero timeout.
A waitForNotified(0) call is typically used for triggering
events near the end of life of the I/O resource (e.g.
drainOutputPipes in QProcess). In that case we must
synchronize the IOCP thread and waitForNotified.

Task-number: QTBUG-29391
Change-Id: Iadbd8564ec461cbc48a6ef8c5627e30a5c6eecfd
Reviewed-by: Oswald Buddenhagen <oswald.buddenhagen@digia.com>

cregit: ee73f7b7db91f6ba32300cb6c16978371012cfb9 https://github.com/qt/qtbase/commit/ee73f7b7db91f6ba32300cb6c16978371012cfb9